------------------------

New Features

  * When initiated, Sag checks the PHP environment for unsupported
    error_reporting values. Thanks to Simeon Willbanks. (closes #8, #9)

  * setStaleDefault() was created to easily allow developers the choice of
    making all of their GET and HEAD requests use stale=ok or not. This is
    great for production systems that do all their querying against stale
    views, allowing another process to trigger index updates based on the
    _changes feed.

Fixed Bugs

  * Fixed a bug where an invalid Content-Size was being sent even if no data
    was passed to the packet.

  * Fixed a bug in POST where an incorrect variable name was being used,
    allowing improper paths to be sent to CouchDB.

  * When caching, bulk() now iterates over the documents it's trying to update
    and sends them to the cache. If a document's _deleted property is true,
    then it's removed from the cache.

Version 0.3
-----------

New Features

  * Cookie based authentication. Thanks to Benjamin Young. (closes #1)

  * Cache results with the SagCache interface. Currently supports caching to
    disk with SagFileCache.

  * Support for HEAD requests. Thanks to Doug Cone. (closes #3)

  * You can now POST to any URI in the database, adding a second $uri parameter
    to the post() function. Allows POST'ing to views. Thanks to Peter Kruithof.
    (closes #7)

  * Exposing CouchDB's runtime _stats interface with the getStats() function.

Fixed Bugs

  * getAllDocs() no longer always includes documents. Thanks to
    www.github.com/hepp.

Version 0.2
-----------

  * Officially adding support for 1.0.x and dropping support for 0.10.x.

New Features

  * Native support for attachments.
  * Internal support for different Content-Type values.
  * Can set timeout on socket connection.
  * Can set timeout on socket read/write.

Fixed Bugs

  * Removed leading white space in header values.
  * Fixed ending line breaks when sending data via a PUT. 